<resources>
    <string name="app_name">Jittr Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_note">New Note</string>
    <string name="note_title_here">Note Title here</string>
    <string name="description_here">Description Here</string>
    <string name="favourite">Favourite</string>
    <string name="remove_from_favourites">Remove from Favourites</string>
    <string name="all_notes">All Notes</string>
    <string name="starred_notes">Starred Notes</string>
    <string name="icon">Icon</string>
    <string name="button">button</string>
    <string name="refresh">refresh</string>
    <string name="delete">Delete</string>
    <string name="delete_note">Delete Note</string>
    <string name="delete_dialog_text">Are you sure you want to delete this note?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="set_dark_theme">Set Dark Theme</string>
    <string name="setup_pin">Setup PIN</string>
    <string name="view_github_code">View Github code</string>
    <string name="rate_app">Rate App</string>
    <string name="settings">settings</string>
    <string name="enable_pin">Enable PIN</string>
    <string name="pin_hint">Pin will be asked during app launch</string>
    <string name="enter_6_digit_pin">Enter 6 digit PIN</string>
    <string name="confirm_pin">Confirm PIN</string>
    <string name="enter_pin_here">Enter PIN here</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="empty_note_filler">No Notes Found,\nStart adding your Notes</string>
    <string name="no_tasks_text">No Tasks Found</string>
</resources>