<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/transparent"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_centerInParent="true"
        app:contentPadding="23dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_width="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_note"
                app:fontFamily="@font/poppins_sb"
                android:textSize="17sp"/>
            <TextView
                android:layout_marginTop="4dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_dialog_text"
                android:textSize="17sp"/>
            <LinearLayout
                android:layout_gravity="end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnNo"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    tools:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    app:fontFamily="@font/poppins_sb"
                    android:textSize="17sp"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnYes"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    tools:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    app:fontFamily="@font/poppins_sb"
                    android:textSize="17sp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


</RelativeLayout>