<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starred_notes"
            app:fontFamily="@font/poppins_sb"
            android:layout_marginStart="8dp"
            android:textSize="17sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/starredNotesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="2"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_notes"
            app:fontFamily="@font/poppins_sb"
            android:layout_marginStart="8dp"
            android:textSize="17sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/allNotesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
            app:spanCount="2"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/new_note"
        android:textAllCaps="false"
        app:icon="@drawable/ic_add"
        android:layout_marginBottom="15dp"
        app:backgroundTint="@color/colorAccent"
        android:textColor="@color/white"
        app:iconTint="@color/white"
        android:textSize="15sp"
        app:iconGravity="textStart"
        app:iconPadding="4dp"
        android:elevation="4dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>