<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_marginStart="18dp"
    android:layout_marginEnd="18dp"
    android:orientation="vertical"
    android:background="?attr/colorSurface"
    xmlns:android="http://schemas.android.com/apk/res/android">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="25dp"
            android:layout_gravity="center_horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:contentDescription="@string/icon"
                android:src="@mipmap/ic_launch_icon"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_marginTop="25dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textSize="21sp"
            app:fontFamily="@font/poppins_sb"
            android:textColor="?attr/colorOnSurface"
            android:text="@string/welcome_back"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pinBox"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            app:boxStrokeWidth="2dp"
            app:boxBackgroundMode="filled"
            android:layout_marginTop="30dp"
            android:hint="@string/enter_pin_here"
            app:boxStrokeColor="?attr/colorOnSurface"
            app:hintTextColor="?attr/colorOnSurface"
            app:passwordToggleEnabled="true"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:imeOptions="actionDone"
                android:textCursorDrawable="?attr/colorOnSurface"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/icon"
            app:elevation="2dp"
            android:src="@drawable/ic_done"
            app:tint="?attr/colorSurface"
            android:layout_gravity="end"/>


    </LinearLayout>
