<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.fragments.SecurityFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIconTint="?attr/colorOnSurface"
        app:navigationIcon="@drawable/ic_left_arrow"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="17sp"
                app:fontFamily="@font/poppins_sb"
                android:textColor="?attr/colorOnSurface"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/enable_pin"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switchEnabled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:trackTint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="15sp"
            app:fontFamily="@font/poppins_med"
            app:layout_constraintBottom_toBottomOf="parent"
            android:text="@string/pin_hint"/>

        <com.google.android.material.textfield.TextInputLayout
            app:passwordToggleEnabled="true"
            android:id="@+id/passwordBox"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:hintTextColor="@color/colorAccent"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/colorAccent"
            android:hint="@string/enter_6_digit_pin"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirmPasswordBox"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxCornerRadiusTopStart="15dp"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:hintTextColor="@color/colorAccent"
            app:boxStrokeWidth="2dp"
            app:boxStrokeColor="@color/colorAccent"
            android:hint="@string/confirm_pin"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="numberPassword"
                android:maxLength="6"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:backgroundTint="@color/colorAccent"
        android:src="@drawable/ic_done"
        app:tint="@color/white"
        android:layout_margin="16dp"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>